--- a/environment.yml
+++ b/environment.yml
@@ -175,6 +175,7 @@ dependencies:
       - aiofiles==23.2.1
       - altair==5.3.0
       - annotated-types==0.7.0
+      - beautifulsoup4==4.12.2
       - blinker==1.8.2
       - cachetools==5.3.3
       - charset-normalizer==3.3.2
